feat(backtest): 重构回测模块并优化API文档
- 统一API响应模型到common/schemas
- 重构回测路由和模型，增强类型安全
- 完善API文档和示例
- 优化前端路由和国际化支持
- 注释掉启动时立即执行的加密货币对同步任务

--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -5,6 +5,7 @@
   "factor_analysis": "因子分析",
   "model_management": "模型管理",
   "backtest": "回测",
+  "strategy_backtest": "策略回测",
   "setting": "设置",
   "scheduled_tasks": "定时任务",
   "strategy_agent": "策略代理",
