feat(策略模块): 添加策略模块基础架构和国际化支持
添加策略模块的基础架构，包括策略基类、执行引擎、服务层和API接口
实现策略的加载、管理和执行功能，支持回测和实盘两种模式
添加国际化支持，更新中英文翻译文件
重构回测服务，使用新的策略模块替代原有实现
添加示例策略和测试配置

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -115,5 +115,16 @@
   "strategy_updated": "Strategy updated",
   "strategy_deleted": "Strategy deleted",
   "backtest_started": "Backtest started",
-  "backtest_completed": "Backtest completed"
+  "backtest_completed": "Backtest completed",
+  "entry_time": "Entry Time",
+  "exit_time": "Exit Time",
+  "hold_time": "Hold Time",
+  "entry_price": "Entry Price",
+  "exit_price": "Exit Price",
+  "position_size": "Position Size",
+  "pnl": "PnL",
+  "return_pct": "Return %",
+  "direction": "Direction",
+  "long": "Long",
+  "short": "Short"
 }
