feat(前端/后端/配置): 更新品牌图标、国际化文本和策略管理功能
- 替换前端品牌图标为qbot.svg
- 添加策略管理相关国际化文本(中英文)
- 扩展策略模型添加content字段存储策略代码
- 优化策略详情API返回数据结构
- 新增默认手续费和初始资金配置项
- 修复策略删除和编辑功能
- 完善前端策略管理页面日期显示
- 移除过期的数据库迁移脚本
- 统一API响应数据结构

style(前端): 调整品牌图片样式
refactor(后端): 重构策略服务代码
docs(国际化): 补充策略管理相关翻译文本

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -126,5 +126,17 @@
   "return_pct": "Return %",
   "direction": "Direction",
   "long": "Long",
-  "short": "Short"
+  "short": "Short",
+  "create_strategy": "Create Strategy",
+  "edit_strategy": "Edit Strategy",
+  "delete_strategy": "Delete Strategy",
+  "backtest_strategy": "Backtest Strategy",
+  "strategy_description": "Strategy Description",
+  "no_description": "No Description",
+  "created_at": "Created At",
+  "updated_at": "Updated At",
+  "no_strategies": "No Strategies",
+  "create_first_strategy": "Create First Strategy",
+  "confirm_delete_strategy": "Confirm Delete Strategy",
+  "delete_strategy_confirm_msg": "Are you sure you want to delete strategy \"{{name}}\"? This operation cannot be undone."
 }
