feat: 添加自定义绘图工具扩展和策略版本支持
refactor(图表): 重构图表页面，集成自定义绘图工具
feat(策略): 为策略模型添加版本字段支持
fix(前端): 禁用部分未实现的功能选项
style(i18n): 更新多语言翻译文本
docs: 更新绘图工具扩展的许可证声明

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -138,5 +138,7 @@
   "no_strategies": "No Strategies",
   "create_first_strategy": "Create First Strategy",
   "confirm_delete_strategy": "Confirm Delete Strategy",
-  "delete_strategy_confirm_msg": "Are you sure you want to delete strategy \"{{name}}\"? This operation cannot be undone."
+  "delete_strategy_confirm_msg": "Are you sure you want to delete strategy \"{{name}}\"? This operation cannot be undone.",
+  "back":"Back",
+  "ai_optimize":"AI Optimize"
 }
