feat: 添加演示数据服务并更新多个功能模块
refactor: 更新SQLAlchemy模型和Pydantic配置
fix: 修复回测失败时的响应处理
style: 调整前端样式和布局
docs: 更新i18n翻译文件
test: 添加回测流程测试用例
chore: 更新依赖和配置示例

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -140,5 +140,93 @@
   "confirm_delete_strategy": "Confirm Delete Strategy",
   "delete_strategy_confirm_msg": "Are you sure you want to delete strategy \"{{name}}\"? This operation cannot be undone.",
   "back":"Back",
-  "ai_optimize":"AI Optimize"
+  "ai_optimize":"AI Optimize",
+  "Start": "Start",
+  "Start.desc": "Backtest start time",
+  "End": "End",
+  "End.desc": "Backtest end time",
+  "Duration": "Duration",
+  "Duration.desc": "Time span of the strategy backtest",
+  "Exposure Time [%]": "Exposure Time [%]",
+  "Exposure Time [%].desc": "Percentage of time the strategy held positions",
+  "Equity Final [$]": "Equity Final [$]",
+  "Equity Final [$].desc": "Final asset value of the strategy",
+  "Equity Peak [$]": "Equity Peak [$]",
+  "Equity Peak [$].desc": "Highest historical asset value",
+  "Commissions [$]": "Commissions [$]",
+  "Commissions [$].desc": "Transaction costs incurred",
+  "Return [%]": "Return [%]",
+  "Return [%].desc": "Total return of the strategy",
+  "Return (Ann.) [%]": "Return (Ann.) [%]",
+  "Return (Ann.) [%].desc": "Annualized return",
+  "Buy & Hold Return [%]": "Buy & Hold Return [%]",
+  "Buy & Hold Return [%].desc": "Benchmark return without trading",
+  "Volatility (Ann.) [%]": "Volatility (Ann.) [%]",
+  "Volatility (Ann.) [%].desc": "Annualized volatility of returns",
+  "CAGR [%]": "CAGR [%]",
+  "CAGR [%].desc": "Compound Annual Growth Rate",
+  "Sharpe Ratio": "Sharpe Ratio",
+  "Sharpe Ratio.desc": "Risk-adjusted return ratio",
+  "Sortino Ratio": "Sortino Ratio",
+  "Sortino Ratio.desc": "Return ratio considering only downside risk",
+  "Calmar Ratio": "Calmar Ratio",
+  "Calmar Ratio.desc": "Ratio of return to maximum drawdown",
+  "Alpha [%]": "Alpha [%]",
+  "Alpha [%].desc": "Excess return relative to benchmark",
+  "Beta": "Beta",
+  "Beta.desc": "Correlation with market returns",
+  "Max. Drawdown [%]": "Max. Drawdown [%]",
+  "Max. Drawdown [%].desc": "Maximum peak-to-trough decline",
+  "Avg. Drawdown [%]": "Avg. Drawdown [%]",
+  "Avg. Drawdown [%].desc": "Average of all drawdowns",
+  "Profit Factor": "Profit Factor",
+  "Profit Factor.desc": "Ratio of gross profit to gross loss",
+  "Win Rate [%]": "Win Rate [%]",
+  "Win Rate [%].desc": "Percentage of profitable trades",
+  "Expectancy [%]": "Expectancy [%]",
+  "Expectancy [%].desc": "Average return per trade",
+  "# Trades": "# Trades",
+  "# Trades.desc": "Total number of trades",
+  "Best Trade [%]": "Best Trade [%]",
+  "Best Trade [%].desc": "Highest percentage gain in a single trade",
+  "Worst Trade [%]": "Worst Trade [%]",
+  "Worst Trade [%].desc": "Largest percentage loss in a single trade",
+  "Avg. Trade [%]": "Avg. Trade [%]",
+  "Avg. Trade [%].desc": "Average percentage gain/loss per trade",
+  "Max. Trade Duration": "Max. Trade Duration",
+  "Max. Trade Duration.desc": "Longest duration of a single trade",
+  "Avg. Trade Duration": "Avg. Trade Duration",
+  "Avg. Trade Duration.desc": "Average duration of all trades",
+  "Max. Drawdown Duration": "Max. Drawdown Duration",
+  "Max. Drawdown Duration.desc": "Longest duration of a drawdown",
+  "Avg. Drawdown Duration": "Avg. Drawdown Duration",
+  "Avg. Drawdown Duration.desc": "Average duration of drawdowns",
+  "SQN": "SQN",
+  "SQN.desc": "System Quality Number",
+  "Kelly Criterion": "Kelly Criterion",
+  "Kelly Criterion.desc": "Optimal position size percentage",
+  "backtest_tasks": "Backtest Tasks",
+  "new_backtest": "New Backtest",
+  "no_backtest_tasks": "No Backtest Tasks",
+  "task_date": "Task Date",
+  "task_return": "Task Return",
+  "export": "Export",
+  "config_info": "Config Info",
+  "strategy_name": "Strategy Name",
+  "trading_symbols": "Trading Symbols",
+  "time_range": "Time Range",
+  "interval": "Interval",
+  "initial_cash": "Initial Cash",
+  "commission_rate": "Commission Rate",
+  "strategy_params": "Strategy Params",
+  "backtest_overview": "Backtest Overview",
+  "performance_analysis": "Performance Analysis",
+  "equity_curve": "Equity Curve",
+  "trade_details": "Trade Details",
+  "risk_analysis": "Risk Analysis",
+  "volatility": "Volatility",
+  "information_ratio": "Information Ratio",
+  "select_backtest_task": "Please select a backtest task to view details",
+  "strategy_config": "Strategy Config",
+  "backtest_config": "Backtest Config"
 }
