--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -141,5 +141,93 @@
   "confirm_delete_strategy": "确认删除策略",
   "delete_strategy_confirm_msg": "您确定要删除策略「{{name}}」吗？此操作不可恢复。",
   "back":"返回",
-  "ai_optimize":"AI优化"
+  "ai_optimize":"AI优化",
+  "Start": "起始时间",
+  "Start.desc": "回测开始时间",
+  "End": "结束时间",
+  "End.desc": "回测结束时间",
+  "Duration": "策略运行时间",
+  "Duration.desc": "反映策略回测的时间跨度",
+  "Exposure Time [%]": "持仓时间百分比",
+  "Exposure Time [%].desc": "策略在回测期间平均持仓时间占比",
+  "Equity Final [$]": "最终权益",
+  "Equity Final [$].desc": "策略最终资产价值",
+  "Equity Peak [$]": "权益峰值",
+  "Equity Peak [$].desc": "策略历史最高资产值",
+  "Commissions [$]": "手续费",
+  "Commissions [$].desc": "策略交易中的手续费成本",
+  "Return [%]": "总收益率",
+  "Return [%].desc": "策略总收益率",
+  "Return (Ann.) [%]": "年化收益率",
+  "Return (Ann.) [%].desc": "扣除时间后的年均收益",
+  "Buy & Hold Return [%]": "买入持有收益率",
+  "Buy & Hold Return [%].desc": "不进行交易的基准收益率",
+  "Volatility (Ann.) [%]": "年化波动率",
+  "Volatility (Ann.) [%].desc": "衡量收益的波动程度",
+  "CAGR [%]": "复合年化增长率",
+  "CAGR [%].desc": "剔除波动后的平滑收益",
+  "Sharpe Ratio": "夏普比率",
+  "Sharpe Ratio.desc": "衡量单位风险下的超额收益",
+  "Sortino Ratio": "索提诺比率",
+  "Sortino Ratio.desc": "仅考虑下行风险后的收益比",
+  "Calmar Ratio": "卡尔马比率",
+  "Calmar Ratio.desc": "收益与最大回撤的比值",
+  "Alpha [%]": "阿尔法系数",
+  "Alpha [%].desc": "策略相对于基准的超额收益",
+  "Beta": "贝塔系数",
+  "Beta.desc": "衡量策略收益与市场收益的相关性",
+  "Max. Drawdown [%]": "最大回撤",
+  "Max. Drawdown [%].desc": "策略从峰值到谷底的跌幅",
+  "Avg. Drawdown [%]": "平均回撤",
+  "Avg. Drawdown [%].desc": "策略历史最大回撤的平均值",
+  "Profit Factor": "利润因子",
+  "Profit Factor.desc": "盈利交易总收益与亏损交易总损失的比值",
+  "Win Rate [%]": "胜率",
+  "Win Rate [%].desc": "盈利交易占比",
+  "Expectancy [%]": "期望值",
+  "Expectancy [%].desc": "单次交易的平均收益",
+  "# Trades": "交易次数",
+  "# Trades.desc": "策略交易的总次数",
+  "Best Trade [%]": "最佳交易",
+  "Best Trade [%].desc": "单笔交易的最大盈利百分比",
+  "Worst Trade [%]": "最差交易",
+  "Worst Trade [%].desc": "单笔交易的最大亏损百分比",
+  "Avg. Trade [%]": "平均交易收益率",
+  "Avg. Trade [%].desc": "所有交易的平均盈利百分比",
+  "Max. Trade Duration": "最大持仓时间",
+  "Max. Trade Duration.desc": "单笔交易的最长持仓时间",
+  "Avg. Trade Duration": "平均持仓时间",
+  "Avg. Trade Duration.desc": "所有交易的平均持仓时间",
+  "Max. Drawdown Duration": "最大回撤时长",
+  "Max. Drawdown Duration.desc": "最大回撤持续的时间",
+  "Avg. Drawdown Duration": "平均回撤时长",
+  "Avg. Drawdown Duration.desc": "平均回撤持续的时间",
+  "SQN": "系统质量数",
+  "SQN.desc": "衡量交易系统质量的综合指标",
+  "Kelly Criterion": "凯利准则",
+  "Kelly Criterion.desc": "优化资金分配比例的指标",
+  "backtest_tasks": "回测任务",
+  "new_backtest": "新建回测",
+  "no_backtest_tasks": "暂无回测任务",
+  "task_date": "任务日期",
+  "task_return": "任务收益",
+  "export": "导出",
+  "config_info": "配置信息",
+  "strategy_name": "策略名称",
+  "trading_symbols": "交易标的",
+  "time_range": "时间范围",
+  "interval": "周期",
+  "initial_cash": "初始资金",
+  "commission_rate": "手续费率",
+  "strategy_params": "策略参数",
+  "backtest_overview": "回测概览",
+  "performance_analysis": "绩效分析",
+  "equity_curve": "收益率曲线",
+  "trade_details": "交易详情",
+  "risk_analysis": "风险分析",
+  "volatility": "波动率",
+  "information_ratio": "信息比率",
+  "select_backtest_task": "请选择一个回测任务查看详情",
+  "strategy_config": "策略配置",
+  "backtest_config": "回测配置"
 }
