feat(回测回放): 新增回测回放功能并优化相关组件
添加回测回放页面，支持播放控制、进度调整和倍速控制
优化策略服务中的标签和参数解析逻辑
完善后端回放数据接口，添加元数据和格式转换
重构前端回测结果页面，改进指标显示和图表交互
更新国际化文件，添加回放相关翻译
调整样式文件以适应新的回放组件布局

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -211,6 +211,7 @@
   "task_date": "Task Date",
   "task_return": "Task Return",
   "export": "Export",
+  "replay": "Replay",
   "config_info": "Config Info",
   "strategy_name": "Strategy Name",
   "trading_symbols": "Trading Symbols",
@@ -220,6 +221,11 @@
   "commission_rate": "Commission Rate",
   "strategy_params": "Strategy Params",
   "backtest_overview": "Backtest Overview",
+  "play": "Play",
+  "pause": "Pause",
+  "stop": "Stop",
+  "fast_forward": "Fast Forward",
+  "play_speed": "Play Speed",
   "performance_analysis": "Performance Analysis",
   "equity_curve": "Equity Curve",
   "trade_details": "Trade Details",
