--- a/i18n/zh-CN.json
+++ b/i18n/zh-CN.json
@@ -212,6 +212,7 @@
   "task_date": "任务日期",
   "task_return": "任务收益",
   "export": "导出",
+  "replay": "回放",
   "config_info": "配置信息",
   "strategy_name": "策略名称",
   "trading_symbols": "交易标的",
@@ -221,6 +222,11 @@
   "commission_rate": "手续费率",
   "strategy_params": "策略参数",
   "backtest_overview": "回测概览",
+  "play": "播放",
+  "pause": "暂停",
+  "stop": "停止",
+  "fast_forward": "快进",
+  "play_speed": "播放速度",
   "performance_analysis": "绩效分析",
   "equity_curve": "收益率曲线",
   "trade_details": "交易详情",
