feat(数据管理): 重构资产池为数据池并添加相关功能
将资产池(AssetPool)重构为数据池(DataPool)，包括类型定义、组件、API和路由的修改
添加数据池管理、数据采集、数据质量和数据可视化页面组件
实现数据池卡片、表单和管理组件，支持创建、编辑和删除操作
添加后端API支持获取插件配置和批量更新配置
更新i18n多语言支持，添加数据管理相关翻译
添加测试用例和模拟数据生成功能

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -233,6 +233,10 @@
   "volatility": "Volatility",
   "information_ratio": "Information Ratio",
   "select_backtest_task": "Please select a backtest task to view details",
+  "data_pool_management": "Data Pool Management",
+  "data_collection": "Data Collection",
+  "data_quality": "Data Quality",
+  "data_visualization": "Data Visualization",
   "strategy_config": "Strategy Config",
   "backtest_config": "Backtest Config"
 }
