feat(websocket): 实现WebSocket通信功能及系统状态监控
refactor(collector): 优化数据收集器的时间戳处理和缺失范围计算

fix(task): 修复任务进度百分比计算可能超过100%的问题

style(i18n): 添加系统状态相关的中英文翻译

test(websocket): 添加WebSocket性能测试脚本

docs(websocket): 编写WebSocket通信协议文档

chore(frontend): 添加uuid依赖用于WebSocket客户端标识

perf(collector): 优化数据下载和过滤逻辑

feat(system): 添加系统状态监控和WebSocket推送功能

refactor(task): 重构任务管理器以支持WebSocket通知

feat(frontend): 实现系统状态监控UI和WebSocket集成

fix(binance): 修复时间戳单位转换问题

refactor(data): 优化数据目录路径处理逻辑

style(css): 添加系统状态提示框样式

chore: 删除测试数据文件

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -238,5 +238,15 @@
   "data_quality": "Data Quality",
   "data_visualization": "Data Visualization",
   "strategy_config": "Strategy Config",
-  "backtest_config": "Backtest Config"
+  "backtest_config": "Backtest Config",
+  "connection": "Connection Status",
+  "connected": "Connected",
+  "disconnected": "Disconnected",
+  "memory_usage": "Memory Usage",
+  "memory_usage_percent": "Memory Usage Percent",
+  "disk_space": "Disk Space",
+  "disk_space_percent": "Disk Space Percent",
+  "cpu_usage": "CPU Usage",
+  "cpu_usage_percent": "CPU Usage Percent",
+  "system_status": "System Status"
 }
